--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,13 @@
+production:
+  adapter: postgresql
+  encoding: unicode
+  reconnect: false
+  database: user_event_management
+  pool: 5
+  username: postgres
+  password: password
+  host: localhost
+  port: 5432
 development:
   adapter: postgresql
   encoding: unicode
