--- a/config/database.yml
+++ b/config/database.yml
@@ -8,11 +8,23 @@ production:
   password: password
   host: localhost
   port: 5432
+
 development:
   adapter: postgresql
   encoding: unicode
   reconnect: false
   database: user_event_management
+  pool: 5
+  username: postgres
+  password: password
+  host: localhost
+  port: 5432
+
+it:
+  adapter: postgresql
+  encoding: unicode
+  reconnect: false
+  database: user_event_management_it
   pool: 5
   username: postgres
   password: password
